@@ -1,3 +1,12 @@
+2005-04-15  Dan Williams  <dcbw@redhat.com>
+
+	Patches from Tom Parker:
+	- Fix memleaks
+	- Join with worker thread rather than polling for its exit
+
+	Patch from Bill Moss:
+	- Cull duplicate ESSIDs from the scan list, taking highest strength AP
+
 2005-04-06  Dan Williams  <dcbw@redhat.com>
 
 	Add debug code for socket/file descriptor leaks.  We register every socket
